# AES3-2009

./: ALPHA_TESTING_GUIDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  field-reliability-report-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  equipment_compatibility.md  feature_request.md  test_results.md
.github/instructions/: copilot-instructions.md  phase-02-requirements.instructions.md  phase-03-architecture.instructions.md  phase-04-design.instructions.md  phase-05-implementation.instructions.md  phase-06-integration.instructions.md  phase-07-verification-validation.instructions.md
.github/workflows/: ci-cpp-implementation.yml  ci-standards-compliance.yml
01-stakeholder-requirements/: phase-01-exit-gate-checklist.md  project-charter.md  stakeholder-requirements-specification.md
01-stakeholder-requirements/business-context/: business-context.md
01-stakeholder-requirements/stakeholders/: stakeholder-register.md
02-requirements/: completeness-audit-cross-cutting-specs.md  completeness-audit-part1-detailed.md  completeness-audit-part2-detailed.md  completeness-audit-part3-detailed.md  completeness-audit-part4-detailed.md  completeness-audit-report.md  error-handling-specification.md  performance-targets.md  phase-02-roadmap.md  security-requirements.md
02-requirements/functional/: aes3-part1-audio-content-requirements.md  aes3-part2-metadata-subcode-requirements.md  aes3-part3-transport-requirements.md  aes3-part4-hal-abstraction-requirements.md
03-architecture/: architecture-quality-scenarios.md  phase04-architecture-readiness-assessment.md
03-architecture/decisions/: ADR-001-architecture-style.md  ADR-002-programming-language.md  ADR-003-aes3-2009-standards-implementation.md
03-architecture/views/: c4-level1-system-context.md  c4-level2-container-view.md  c4-level3-component-view.md
04-design/: TDD-approach.md
04-design/components/part1-audio-content/: DES-C-003-pcm-encoder.md
04-design/components/part3-transport/: DES-C-001-subframe-builder.md
04-design/interfaces/: DES-I-001-audio-hal-interface.md
05-implementation/: CMakeLists.txt  PHASE-05-COMPLETION.md  README.md
05-implementation/benchmarks/: bench_pcm_encoder.cpp  bench_subframe_builder.cpp
05-implementation/include/aes3/: audio_hal_interface.h
05-implementation/mocks/: mock_audio_hal.cpp
05-implementation/src/AES/AES3/Part1/_2009/audio_coding/: pcm_encoder.cpp  pcm_encoder.hpp
05-implementation/src/AES/AES3/Part2/_2009/metadata/: channel_status.cpp  channel_status.hpp
05-implementation/src/AES/AES3/Part3/_2009/subframe/: subframe_builder.cpp  subframe_builder.hpp  subframe_data.hpp
05-implementation/tests/AES/AES3/Part1/_2009/audio_coding/: test_pcm_encoder.cpp
05-implementation/tests/AES/AES3/Part1/_2009/conformity/: test_aes3_part1_conformity.cpp  test_aes3_part1_conformity_simple.cpp
05-implementation/tests/AES/AES3/Part2/_2009/conformity/: test_aes3_part2_conformity.cpp
05-implementation/tests/AES/AES3/Part3/_2009/conformity/: test_aes3_part3_conformity.cpp
05-implementation/tests/AES/AES3/Part3/_2009/subframe/: test_subframe_builder.cpp  test_subframe_data.cpp
05-implementation/tests/AES/AES3/Part4/_2009/conformity/: test_aes3_part4_hal_conformity.cpp
05-implementation/tests/Common/: mock_audio_hal.c  mock_audio_hal.h  test_mock_audio_hal.cpp
05-implementation/tests/integration/: test_transmit_integration.cpp  test_transmit_path.cpp
06-integration/: CMakeLists.txt  operational-profile.md
06-integration/reliability/: reliability_logger.hpp
06-integration/tests/integration/: test_aes3_end_to_end.cpp
06-integration/tests/reliability/: test_reliability_logging.cpp
07-verification-validation/: code-coverage-gap-analysis.md  vv-plan.md  vv-summary-report.md
07-verification-validation/test-results/: acceptance-test-report.md  code-verification-report.md  design-verification-report.md  integration-verification-report.md  requirements-verification-report.md
08-transition/deployment-plans/: alpha-release-announcement.md  alpha-release-plan.md  ci-status-verification.md  day-5-completion-summary.md  github-setup-checklist.md  peer-review-assignments.md  peer-review-invitation-email.md  pre-release-verification-checklist.md  session-summary-day5-evening.md  tonight-action-items.md
docs/brainstorm/: brainstorm_1.md  brainstorm_2.md  stakeholder_review.md
docs/stakeholder_interviews/: HAL_BestPractice.md  HAL_stakeholderRequirements.md  cocnruring_referencing_standards.md  concuringstandards_StakeholderRequirements.md
lib/Standards/: README.md
lib/Standards/AES/AES3/2009/Part1/: README.md
lib/Standards/AES/AES3/2009/Part2/: README.md
lib/Standards/AES/AES3/2009/Part3/: README.md
lib/Standards/AES/AES3/2009/Part4/: README.md
lib/Standards/Common/interfaces/: hal_interface.h
reports/: orphans.md  traceability-matrix.md
scripts/: build-release-artifacts.ps1  verify-documentation-links.ps1
